Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,66 @@
         <h1>
 <a name="ember-infinitetableview" class="anchor" href="#ember-infinitetableview"><span class="octicon octicon-link"></span></a>Ember InfiniteTableView</h1>
 
-<p>Vista de tabla con paginación infinita con un estilo parecido a UITableView de iOS</p>
+<p>Table view with similar style to iOS UITableView</p>
+
+<h2>
+<a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h2>
+
+<ul>
+<li>jQuery</li>
+<li>Twitter Bootstrap</li>
+<li>Handlebars</li>
+<li>Ember.js</li>
+</ul><h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/x-handlebars"</span> <span class="na">data-template-name=</span><span class="s">"users"</span><span class="nt">&gt;</span>
+    <span class="p">{{</span><span class="err">#</span><span class="nx">infinite</span><span class="o">-</span><span class="nx">table</span><span class="o">-</span><span class="nx">view</span> <span class="nx">controllerBinding</span><span class="o">=</span><span class="s2">"controller"</span><span class="p">}}</span>
+      <span class="p">{{</span><span class="err">#</span><span class="nx">infinite</span><span class="o">-</span><span class="nx">table</span><span class="o">-</span><span class="nx">view</span><span class="o">-</span><span class="nx">header</span><span class="p">}}</span>        
+        <span class="o">&lt;</span><span class="nx">div</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"form-group input-group"</span><span class="o">&gt;</span>      
+          <span class="p">{{</span><span class="nx">view</span> <span class="nx">Ember</span><span class="p">.</span><span class="nx">TextField</span> <span class="nx">placeholder</span><span class="o">=</span><span class="s2">"Search"</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"form-control"</span> <span class="nx">valueBinding</span><span class="o">=</span><span class="s2">"controller.searchText"</span><span class="p">}}</span>
+          <span class="o">&lt;</span><span class="nx">span</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"input-group-addon"</span><span class="o">&gt;</span>
+            <span class="o">&lt;</span><span class="nx">i</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"glyphicon glyphicon-search"</span><span class="o">&gt;&lt;</span><span class="err">/i&gt;</span>
+          <span class="o">&lt;</span><span class="err">/span&gt;</span>
+        <span class="o">&lt;</span><span class="err">/div&gt;</span>
+      <span class="p">{{</span><span class="err">/infinite-table-view-header}}</span>
+
+      <span class="p">{{</span><span class="err">#</span><span class="nx">infinite</span><span class="o">-</span><span class="nx">table</span><span class="o">-</span><span class="nx">view</span><span class="o">-</span><span class="nx">items</span><span class="p">}}</span>                
+        <span class="p">{{</span><span class="err">#</span><span class="nx">each</span> <span class="nx">item</span> <span class="k">in</span> <span class="nx">items</span><span class="p">}}</span>
+          <span class="p">{{</span><span class="nx">infinite</span><span class="o">-</span><span class="nx">table</span><span class="o">-</span><span class="nx">view</span><span class="o">-</span><span class="nx">item</span> <span class="nx">item</span><span class="o">=</span><span class="nx">item</span><span class="p">}}</span>
+        <span class="p">{{</span><span class="err">/each}}</span>
+      <span class="p">{{</span><span class="err">/infinite-table-view-items}}</span>
+
+    <span class="p">{{</span><span class="err">/infinite-table-view}}      </span>
+  <span class="nt">&lt;/script&gt;</span>
+
+  <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/x-handlebars"</span> <span class="na">data-template-name=</span><span class="s">"components/infinite-table-view-header"</span><span class="nt">&gt;</span>        
+    <span class="p">{{</span><span class="nx">yield</span><span class="p">}}</span>
+  <span class="nt">&lt;/script&gt;</span>
+
+  <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/x-handlebars"</span> <span class="na">data-template-name=</span><span class="s">"components/infinite-table-view"</span><span class="nt">&gt;</span>           
+    <span class="p">{{</span><span class="nx">yield</span><span class="p">}}</span>
+  <span class="nt">&lt;/script&gt;</span>
+
+  <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/x-handlebars"</span> <span class="na">data-template-name=</span><span class="s">"components/infinite-table-view-items"</span><span class="nt">&gt;</span>
+    <span class="p">{{</span><span class="nx">yield</span><span class="p">}}</span>
+  <span class="nt">&lt;/script&gt;</span>    
+
+  <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/x-handlebars"</span> <span class="na">data-template-name=</span><span class="s">"components/infinite-table-view-item"</span><span class="nt">&gt;</span>        
+    <span class="o">&lt;</span><span class="nx">a</span> <span class="nx">href</span><span class="o">=</span><span class="s2">"#"</span><span class="o">&gt;</span>
+      <span class="o">&lt;</span><span class="nx">img</span> <span class="p">{{</span><span class="nx">bindAttr</span> <span class="nx">src</span><span class="o">=</span><span class="nx">item</span><span class="p">.</span><span class="nx">avatar_url</span> <span class="nx">alt</span><span class="o">=</span><span class="nx">item</span><span class="p">.</span><span class="nx">login</span><span class="p">}}</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"img-circle avatar"</span><span class="o">&gt;</span>
+      <span class="o">&lt;</span><span class="nx">h4</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"list-group-item-heading"</span><span class="o">&gt;</span><span class="p">{{</span><span class="nx">item</span><span class="p">.</span><span class="nx">login</span><span class="p">}}</span><span class="o">&lt;</span><span class="err">/h4&gt;</span>
+      <span class="o">&lt;</span><span class="nx">div</span> <span class="kr">class</span><span class="o">=</span><span class="s2">"list-group-item-text"</span><span class="o">&gt;</span><span class="p">{{</span><span class="nx">item</span><span class="p">.</span><span class="nx">type</span><span class="p">}}</span><span class="o">&lt;</span><span class="err">/div&gt;</span>
+    <span class="o">&lt;</span><span class="err">/a&gt; </span>
+  <span class="nt">&lt;/script&gt;</span>  
+</pre></div>
+
+<h2>
+<a name="roadmap" class="anchor" href="#roadmap"><span class="octicon octicon-link"></span></a>Roadmap</h2>
+
+<ul>
+<li>Infinite pagination</li>
+</ul>
       </section>
     </div>
     <footer>
