Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Ember Infinite Table View</h1>
-        <p>Table view with similar style to iOS UITableView</p>
+        <p>Table view with similar style to iOS UITableView (in development)</p>
         <p class="view"><a href="https://github.com/jdmartinez/ember-infinite-table-view">View the Project on GitHub <small>jdmartinez/ember-infinite-table-view</small></a></p>
         <ul>
           <li><a href="https://github.com/jdmartinez/ember-infinite-table-view/zipball/master">Download <strong>ZIP File</strong></a></li>
