Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="stylesheet" href="stylesheets/custom.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -34,6 +33,8 @@
 <p>Table view with similar style to iOS UITableView.</p>
 
 <p><code>InfiniteTableView</code> may incluye a header or footer that <em>performs</em> actions to the component.</p>
+
+<p><a href="examples/searching/index.html">Demo</a></p>
 
 <h2>
 <a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h2>
@@ -79,10 +80,6 @@
 
 {{/infinite-table-view}}      
 </code></pre>
-
-<h2>Demo</h2>
-
-<iframe class="demo" src="examples/searching/index.html"></iframe>
 
 <h2>
 <a name="roadmap" class="anchor" href="#roadmap"><span class="octicon octicon-link"></span></a>Roadmap</h2>
