--- a/examples/searching/index.html
+++ b/examples/searching/index.html
@@ -12,6 +12,7 @@
   
   <script type="text/x-handlebars">
     <div class="col-md-12">      
+      <h1>Ember Infinite Table View</h1>
       {{outlet}}
     </div>
   </script>
