Actualización del ejemplo

--- a/examples/searching/index.html
+++ b/examples/searching/index.html
@@ -12,7 +12,8 @@
   
   <script type="text/x-handlebars">
     <div class="col-md-12">      
-      <h1>Ember Infinite Table View</h1>
+      <h2>Ember Infinite List View example</h2>
+
       {{outlet}}
     </div>
   </script>
