Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p><code>InfiniteTableView</code> may incluye a header or footer that <em>performs</em> actions to the component.</p>
 
-<p><a href="examples/searching/index.html">Demo</a></p>
+<p><a href="examples/searching">Demo</a></p>
 
 <h2>
 <a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h2>
